--- a/E-commerce/Ecommerce-Admin-Site/index.html
+++ b/E-commerce/Ecommerce-Admin-Site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/Luggage_Icon.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="./src/assets/images/Luggage_Icon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vamvoda Admin Management</title>
   </head>
